# miniterm

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml  multi-platform.yml
src/: download.cpp  download.hpp  file_operations.cpp  file_operations.hpp  main.cpp  nescoffee.cpp  nescoffee.hpp
